updates till lab2

--- a/lab2/makefile
+++ b/lab2/makefile
@@ -1,8 +1,8 @@
 all:    Scanner.ih Scanner.h Scannerbase.h lex.cc parse.cc main.cc Parser.h Parserbase.h Parser.ih
 	g++   --std=c++0x lex.cc parse.cc main.cc -o parser
-	parser < test.c > junk
+	./parser < test.c > junk
 
-        
+
 Scanner.ih: lex.l
 	if [ ! -e Scanner.ih ]; then \
 		flexc++ lex.l;\
@@ -10,7 +10,7 @@ Scanner.ih: lex.l
 	fi
 
 parse.cc Parser.h Parserbase.h Parser.ih: parse.y
-	bisonc++  --construction parse.y; 
+	bisonc++  --construction parse.y;
 	sed -i '/insert preincludes/a #include "ast.h"' Parserbase.h;
 	sed -i '\|STYPE__     d_val__;| d' Parserbase.h;
 	sed -i '\|typedef Meta__::SType STYPE__;| a \\tpublic: static STYPE__  d_val__; ' Parserbase.h;
@@ -18,7 +18,6 @@ parse.cc Parser.h Parserbase.h Parser.ih: parse.y
 	sed -i '\|void Parser::print__()| i Meta__::SType ParserBase::d_val__; ' parse.cc
 
 
-.PHONY: clean     
+.PHONY: clean
 clean:
 	$(RM) Parser.ih Parser.h Parserbase.h parse.cc Scanner.ih Scanner.h Scannerbase.h lex.cc a.out graph.ps junk *~
-
