line number added

--- a/lab2_2/makefile
+++ b/lab2_2/makefile
@@ -1,5 +1,5 @@
-all:    Scanner.ih Scanner.h Scannerbase.h lex.cc parse.cc main.cc Parser.h Parserbase.h Parser.ih
-	g++   --std=c++0x lex.cc parse.cc main.cc -o parser
+all:    Scanner.ih Scanner.h Scannerbase.h lex.cc parse.cc main.cc Parser.h Parserbase.h Parser.ih ast.h ast.cpp
+	g++  -ggdb --std=c++0x lex.cc parse.cc main.cc -o parser
 	./parser < test.c > junk
 
 
@@ -16,6 +16,8 @@ parse.cc Parser.h Parserbase.h Parser.ih: parse.y
 	sed -i '\|typedef Meta__::SType STYPE__;| a \\tpublic: static STYPE__  d_val__; ' Parserbase.h;
 	sed -i '/include "Parser.ih"/a #include "ast.cpp"' parse.cc;
 	sed -i '\|void Parser::print__()| i Meta__::SType ParserBase::d_val__; ' parse.cc
+	sed -i '\|typedef Meta__::SType STYPE__;| a \\tpublic: static int lineNr; ' Parserbase.h;
+	sed -i '\|void Parser::print__()| i int ParserBase::lineNr = 1; ' parse.cc
 
 
 .PHONY: clean
